<resources>
    <string name="app_name">Excel Reader</string>
    <string name="upload">Upload</string>
    <string name="select_storage">Select Storage</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_strorage">ExternalStorage</string>
    <string name="read_file">Read File</string>
    <string name="read_file_2">read file</string>


    <string-array name="fieldArray">
        <item>Select Item</item>
        <item>mrn</item>
        <item>SerialNo</item>
        <item>Pin</item>
        <item>State</item>
        <item>City</item>
        <item>Country</item>
        <item>Sex</item>
        <item>Qual</item>
        <item>af</item>
        <item>cp</item>
        <item>emp</item>
        <item>pa</item>
        <item>nri</item>
        <item>assoyr</item>
        <item>fellyr</item>
        <item>voterNo</item>
        <item>BoothNo</item>
        <item>BoothName</item>
        <item>Religion</item>
        <item>Area</item>
        <item>DOB</item>
        <item>FName</item>
        <item>MName</item>
        <item>LName</item>
        <item>Designation</item>
        <item>Organisation</item>
        <item>FlatNo</item>
        <item>FloorNo</item>
        <item>Organisation</item>
        <item>mobile</item>
        <item>phone</item>
        <item>email</item>

    </string-array>


    <string name="user_id">User Id</string>
    <string name="error_user_id_empty">Please enter user id.</string>
    <string name="donor">Donor</string>
    <string name="patron">Patron</string>
    <string name="follow_up">Follow Up</string>
    <string name="follow_up_on">Follow up on:</string>
    <string name="invitees">Invitees</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="app_tour">App Tour</string>
    <string name="log_out">Logout</string>
    <string name="committed_amount">MRN:</string>
    <string name="paid">Country:</string>
    <string name="balance">Pin:</string>
    <string name="last_paid_date">Date:</string>
    <string name="waived_off">Waived Off:</string>
    <string name="amount">Last Paid:</string>
    <string name="enrolled_by">Enrolled By:</string>
    <string name="current">Current Fund Raiser:</string>
    <string name="allocated">Allocated To:</string>
    <string name="registered_for">Registered For:</string>
    <string name="registered_by">By:</string>
    <string name="spouse">Spouse:</string>
    <string name="dob">DOB:</string>
    <string name="show_seva_history">Seva History</string>
    <string name="seva_type">Seva Type</string>
    <string name="seva_code">Seva Code</string>
    <string name="residence">Residence</string>
    <string name="total_paid">Total Paid:</string>
    <string name="patronship">Patronship:</string>
    <string name="other">Other:</string>
    <string name="cleared">Cleared:</string>
    <string name="pdc">PDC:</string>
    <string name="email">Mail</string>
    <string name="dashboard">Dashboard</string>
    <string name="change_pass">Change Password</string>
    <string name="sign_in">Sign In</string>
    <string name="donar_id">Donor Id</string>
    <string name="donar_name">Donor Name</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="mail">Email</string>
    <string name="postpone">Postpone</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pincode</string>
    <string name="office">Office</string>
    <string name="seva">Seva</string>
    <string name="patron_id">Patron Id</string>
    <string name="patron_name">Patron Name</string>
    <string name="patron_status">Patron Status</string>
    <string name="fundraiser">Fundraiser</string>
    <string name="current_fund">Current</string>
    <string name="allocated_fundraiser">Allocated</string>
    <string name="enrolled">Enrolled</string>
    <string name="location">Location</string>
    <string name="donation">Donation</string>
    <string name="include_patronship_payment">Include patronship payment</string>
    <string name="exclude_donars_paid_for_patronship">Exclude donors paid for patronship</string>
    <string name="dr_number">DR No.</string>
    <string name="last_paid">Last Paid</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="last_amount">Last Amount</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Welcome</string>
    <string name="receipt_date">Receipt Date:</string>
    <string name="payment_mode">Type:</string>
    <string name="ins_no">Ins No:</string>
    <string name="ins_on">On:</string>
    <string name="preacher">Preacher:</string>
    <string name="status">Status:</string>
    <string name="patronship_payment">Patronship Payment</string>
    <string name="patron_detail">Patron Detail</string>
    <string name="mailing_addres">Mailing address (Office):</string>
    <string name="alternate_addres">Alternate address (Residence):</string>
    <string name="phone_number">Phone:</string>
    <string name="emails">Email:</string>
    <string name="bahumana">Bahumana</string>
    <string name="puja_dates">Puja Dates:</string>
    <string name="news_letter">Newsletter:</string>
    <string name="publication_one">Publication I:</string>
    <string name="publication_two">Publication II:</string>
    <string name="on">On:</string>
    <string name="patron_card">Patron Card:</string>
    <string name="seva_card">Seva Card:</string>
    <string name="name_inscription">Name Inscription:</string>
    <string name="yagna">Yagna:</string>
    <string name="donor_detail">Donor Detail</string>
    <string name="other_payment">Other Payment</string>
    <string name="patron_seva_history">Patron Seva History</string>
    <string name="enrolled_on">Enrolled On:</string>
    <string name="upgraded_on">Upgraded On:</string>
    <string name="Redefined_on">Redefined On:</string>
    <string name="enrolled_for">For:</string>
    <string name="by">By:</string>
    <string name="name">Name:</string>
    <string name="relationship">Relationship:</string>
    <string name="occassion">Occassion:</string>
    <string name="comment">Comment</string>
    <string name="complaint">Complaint</string>
    <string name="request">Request</string>
    <string name="general">General</string>
    <string name="accommodation">Accommodation</string>
    <string name="puja_attendance">Puja Attendance</string>
    <string name="inr">INR</string>
    <string name="yagna_name">Yagna Name:</string>
    <string name="attened_on">Attended On:</string>
    <string name="last_invited_year">Last Invited Year:</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="follow_up_date">Follow Up Date:</string>
    <string name="follow_up_type">Follow Up Type:</string>
    <string name="remarks">Remarks:</string>
    <string name="save_follow_up">Save</string>
    <string name="follow_up_with_patron">Follow with the patron</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registered_email_addr_txt"> Enter your registered email address to request a new password</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_email">Email</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="notification">Notifications</string>
    <string name="no_of_days">No. of Days you want to be Directly Logged In</string>
    <string name="customize_login">Customize Log In:</string>
    <string name="coming_soon">Coming Soon...</string>


    //message
    <string name="logout_success">Logout Successful</string>
    <string name="internet_connection">You are offline. Please check your internet connection.</string>
    <string name="no_mobile_number">No Mobile Number Found.</string>
    <string name="no_email">No Email Found.</string>


</resources>
