<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/select_storage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txt_view_internal_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/internal_storage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt_view_external_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/external_strorage"/>

</LinearLayout>
